--- a/templates/manifest.plist.erb
+++ b/templates/manifest.plist.erb
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string><%= ipa_url %></string>
+                    <string><%= escaped_ipa_url %></string>
                 </dict>
             </array>
             <key>metadata</key>
