Add support for specifying the vendor name

--- a/templates/manifest.plist.erb
+++ b/templates/manifest.plist.erb
@@ -24,6 +24,10 @@
                 <string>software</string>
                 <key>title</key>
                 <string><%= app_name %></string>
+                <% if vendor_name %>
+                <key>subtitle</key>
+                <string><%= vendor_name %></string>
+                <% end %>
             </dict>
         </dict>
     </array>
