Support for (now mandatory) manifest icon entries

--- a/templates/manifest.plist.erb
+++ b/templates/manifest.plist.erb
@@ -13,6 +13,18 @@
                     <key>url</key>
                     <string><%= escaped_ipa_url %></string>
                 </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>display-image</string>
+                    <key>url</key>
+                    <string><%= escaped_icon_url %></string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>full-size-image</string>
+                    <key>url</key>
+                    <string><%= escaped_fullsize_image_url %></string>
+                </dict>
             </array>
             <key>metadata</key>
             <dict>
